--- a/tm1project.json
+++ b/tm1project.json
@@ -1,1 +1,1 @@
-{"Version":1,"Ignore":["Dimensions('Sandboxes')"],"Files":[]}
+{"Version":1,"Ignore":["Processes('Cub. Employee Staging.LoadFromFile')","Dimensions('Sandboxes')"],"Files":[]}
